--- a/templates/base.html
+++ b/templates/base.html
@@ -39,9 +39,11 @@
             <li class="nav-item">
                 <a class="nav-link" href="{{ url_for('home') }}">Home</a>
             </li>
+            {% if current_user.id == 1 %}
             <li class="nav-item">
                 <a class="nav-link" href="{{ url_for('new_post') }}">Write</a>
             </li>
+            {% endif %}
             <li class="nav-item">
                 <a class="nav-link" href="{{ url_for('logout') }}">Sign Out</a>
             </li>
