--- a/templates/view-post.html
+++ b/templates/view-post.html
@@ -24,8 +24,10 @@
                             <a class="ms-1 post-author" href="#">{{ post.author.name }}</a>
                         </li>
                     </ul>
-                    <p class="card-text my-4">{{ post.body | striptags }}</p>
+                    <p class="card-text my-4">{{ post.body | safe }}</p>
+                    {% if current_user.id == 1 %}
                     <a href="{{ url_for('edit_post', post_id=post.id) }}" class="btn px-4 py-2 rounded-0">Edit Post<i class="fa-solid fa-arrow-right ms-2"></i></a>
+                    {% endif %}
                 </div>
                 <!-- End of Card Body -->
             </div>
