--- a/templates/view-post.html
+++ b/templates/view-post.html
@@ -3,7 +3,7 @@
 {% block title %} iSulat | Login {% endblock %}
 
 {% block content %}
-<div class="home-section container pt-4 mt-5">
+<div class="view-post-section container pt-4 mt-5">
     <div class="row justify-content-evenly">
         <div class="col-lg-8">
             <div class="card bg-transparent post-item border-0 mb-5">
@@ -28,10 +28,44 @@
                     {% if current_user.id == 1 %}
                     <a href="{{ url_for('edit_post', post_id=post.id) }}" class="btn px-4 py-2 rounded-0">Edit Post<i class="fa-solid fa-arrow-right ms-2"></i></a>
                     {% endif %}
+                    <hr class="mt-5 mb-4">
+                    <!-- Comment Section -->
+                    <div class="auth-form">
+                        <form method="POST" action="{{ url_for('view_post', post_id=post.id) }}" novalidate>
+                            {{ form.csrf_token }}
+                            {{ form.comment.label(class="form-label") }}
+                            {{ form.comment(class="form-control rounded-0") }}                     
+                            {% for err in form.comment.errors %}
+                            <span class="text-danger error-handling">{{ err }}</span>
+                            {% endfor %}
+                            <button type="submit" class="btn px-4 py-2 rounded-0 my-3">Comment<i class="fa-solid fa-arrow-right ms-2"></i></button>
+                        </form>
+                    </div>
+                    <!-- All Comments -->
+                    <div class="comment">
+                        {% for comment in post.comments %}
+                        <ul class="commentList mt-3">
+                            <li>
+                                <div class="commenterImage">
+                                    <img class="me-1 border border-2" src="{{ comment.comment_author.email | gravatar }}"/>
+                                    <span class="sub-text">{{ comment.comment_author.name}}</span>
+                                </div>
+                                <div class="commentText ps-5 mt-2">
+                                    <p>{{ comment.text | safe}}</p>
+                                </div>
+                            </li>
+                        </ul>
+                        <hr>
+                          {% endfor %}
+                        </div>
                 </div>
                 <!-- End of Card Body -->
             </div>
             <!-- End of Card -->
         </div>
         <!-- End of Col 7 -->
+    </div>
+    <!-- End of Row -->
+</div>
+<!-- End of View Post Section -->
 {% endblock %}
