--- a/static/css/styles.css
+++ b/static/css/styles.css
@@ -14,6 +14,11 @@ i {
     color: #00ADB5;
 }
 
+img {
+    max-width: 100% !important;
+    max-height: auto !important;
+}
+
 .btn {
     background-color: #00ADB5;
     border: 1px solid #00ADB5;
@@ -39,7 +44,7 @@ i {
 nav {
     background-color: #222831;
     font-family: 'Barlow Condensed', sans-serif;
-    font-size: 1.20rem;
+    font-size: 1.15rem;
     font-weight: 500;
     letter-spacing: 1px;
 }
@@ -57,7 +62,7 @@ nav {
     letter-spacing: 1px;
 }
 
-.auth-form input {
+.auth-form input, .auth-form textarea {
     font-size: 1.1rem;    
     letter-spacing: 1px;
 }
@@ -83,7 +88,7 @@ nav {
 }
 
 /* Home Section */
-.home-section h2 {
+.home-section h2, .view-post-section h2 {
     font-family: 'Barlow Condensed', sans-serif;
     font-size: 2.25rem;
     font-weight: 600;
@@ -99,7 +104,7 @@ nav {
     line-height: 1.65rem;
 }
 
-.home-section ul {
+ ul {
     padding-left: 0;
 }
 
@@ -152,4 +157,20 @@ nav {
 
 #cke_body {
     border: 0;
+}
+
+/* All Comments */
+.comment ul {
+    list-style: none;
+}
+.comment img {
+    border-color: #00ADB5 !important;
+    border-radius: 100%;
+    width: 40px;
+}
+
+.comment .sub-text {
+    color: #6b7481;
+    font-size: 0.9rem;
+    font-weight: 500;
 }
