--- a/templates/base.html
+++ b/templates/base.html
@@ -47,6 +47,9 @@
             <li class="nav-item">
                 <a class="nav-link" href="{{ url_for('logout') }}">Sign Out</a>
             </li>
+            <li class="nav-item">
+                <a class="nav-link" href="{{ url_for('logout') }}">User: {{ current_user.name }}</a>
+            </li>
             {% endif %}
         </ul>
         </div>
