--- a/templates/view-post.html
+++ b/templates/view-post.html
@@ -7,21 +7,19 @@
     <div class="row justify-content-evenly">
         <div class="col-lg-8">
             <div class="card bg-transparent post-item border-0 mb-5">
-                <a href="{{ url_for('view_post', post_id = post.id) }}">
-                    <img class="card-img-top rounded-0" src="{{ post.img_url }}" alt="post-image">
-                </a>
+                <img class="card-img-top rounded-0" src="{{ post.img_url }}" alt="post-image">
                 <div class="card-body px-0">
                     <h2 class="card-title">
-                        <a class="pe-5" style="font-size: 3rem;" href="#">{{ post.title }}</a>
+                        <span class="pe-5" style="font-size: 3rem;">{{ post.title }}</span>
                     </h2>
                     <ul class="post-meta mt-3">
                         <li class="d-inline-block me-3">
                             <i class="fa-solid fa-calendar-days"></i>
-                            <a class="ms-1 post-date" href="#">{{ post.date }}</a>
+                            <span class="ms-1 post-date" href="#">{{ post.date }}</span>
                         </li>
                         <li class="d-inline-block">
                             <i class="fa-solid fa-user"></i>
-                            <a class="ms-1 post-author" href="#">{{ post.author.name }}</a>
+                            <span class="ms-1 post-author" href="#">{{ post.author.name }}</span>
                         </li>
                     </ul>
                     <p class="card-text my-4">{{ post.body | safe }}</p>
