--- a/templates/make-post.html
+++ b/templates/make-post.html
@@ -1,6 +1,6 @@
 {% extends "base.html" %}
 
-{% block title %} iSulat | Login {% endblock %}
+{% block title %} Sulat Aian | {% if is_edit %} Edit Post {% else %} New Post {% endif %} {% endblock %}
 
 {% block content %}
 <div class="make-post-section container pt-4 mt-5">
