--- a/templates/base.html
+++ b/templates/base.html
@@ -28,26 +28,36 @@
         <div class="collapse navbar-collapse" id="navbarNav">
         <ul class="navbar-nav ms-auto">
             <!-- Check user if authenticated -->
-            {% if not current_user.is_authenticated %}
-            <li class="nav-item">
-                <a class="nav-link" href="{{ url_for('login') }}">Sign In</a>
-            </li>
-            <li class="nav-item">
-                <a class="nav-link" href="{{ url_for('register') }}">Create Account</a>
-            </li>
-            {% else %}
             <li class="nav-item">
                 <a class="nav-link" href="{{ url_for('home') }}">Home</a>
             </li>
-            {% if current_user.id == 1 %}
             <li class="nav-item">
-                <a class="nav-link" href="{{ url_for('new_post') }}">Write</a>
+                <a class="nav-link" href="{{ url_for('home') }}">Blog</a>
             </li>
-            {% endif %}
             <li class="nav-item">
-                <a class="nav-link" href="{{ url_for('logout') }}">Sign Out</a>
+                <a class="nav-link" href="#">About</a>
             </li>
-            {% endif %}
+            <li class="nav-item">
+                <a class="nav-link" href="#">Contact</a>
+            </li>
+            <li class="nav-item dropdown ms-4">
+                <a class="nav-link dropdown-toggle" href="#" role="button" data-bs-toggle="dropdown" aria-expanded="false">
+                <i class="fa-solid fa-user"></i>
+                </a>
+                <ul class="dropdown-menu py-0">
+                    {% if current_user.is_authenticated %}
+                        <li><span class="dropdown-item current-user">{{ current_user.name }}</span></li>
+                        <li><hr class="dropdown-divider my-0"></li>
+                            {% if current_user.id == 1 %}
+                                <li><a class="dropdown-item" href="{{ url_for('new_post') }}">Write</a></li>
+                            {% endif %}
+                        <li><a class="dropdown-item" href="{{ url_for('logout') }}">Sign Out</a></li>
+                    {% else %}
+                        <li><a class="dropdown-item" href="{{ url_for('login') }}">Sign In</a></li>
+                        <li><a class="dropdown-item" href="{{ url_for('register') }}">Create Account</a></li>
+                    {% endif %}
+                </ul>
+              </li>
         </ul>
         </div>
     </div>
@@ -72,6 +82,15 @@
         {% endif %}
     {% endwith %}
     {% block content %} {% endblock %}
+    <footer class="text-center pb-3">
+        <ul class="pb-1">
+            <li class="d-inline-block"><a href="https://www.linkedin.com/in/crisaianvergara/" target="_blank"><i class="fa-brands fa-linkedin fa-2xl mx-2"></i></a></li>
+            <li class="d-inline-block"><a href="https://github.com/crisaianvergara" target="_blank"><i class="fa-brands fa-github fa-2xl mx-2"></i></i></a></li>
+            <li class="d-inline-block"><a href="https://twitter.com/The21stKuruno" target="_blank"><i class="fa-brands fa-twitter fa-2xl mx-2"></i></i></a></li>
+            <li class="d-inline-block"><a href="https://www.instagram.com/aian.vergara/" target="_blank"><i class="fa-brands fa-instagram fa-2xl mx-2"></i></a></li>
+        </ul>
+        <p class="text-dark-emphasis">Copyright © Sulat Aian 2023</p>
+    </footer>
     <!-- Bootstrap Scripts -->
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha1/dist/js/bootstrap.bundle.min.js"></script>
     <!-- My Scripts -->
