--- a/templates/index.html
+++ b/templates/index.html
@@ -8,12 +8,12 @@
             <div class="col-lg-7">
                 {% for post in posts %}
                 <div class="card bg-transparent post-item border-0 mb-5">
-                    <a href="{{ url_for('view_post', post_id = post.id) }}">
+                    <a class="post-hover" href="{{ url_for('view_post', post_id = post.id) }}">
                         <img class="card-img-top rounded-0" src="{{ post.img_url }}" alt="post-image">
                     </a>
                     <div class="card-body px-0">
                         <h2 class="card-title">
-                            <a class="" href="{{ url_for('view_post', post_id = post.id) }}">{{ post.title }}</a>
+                            <a class="post-hover" href="{{ url_for('view_post', post_id = post.id) }}">{{ post.title }}</a>
                         </h2>
                         <ul class="post-meta mt-3">
                             <li class="d-inline-block me-3">
@@ -25,7 +25,7 @@
                                 <span class="ms-1 post-author">{{ post.author.name }}</span>
                             </li>
                         </ul>
-                        <p class="card-text post-body my-4">{{ post.body | striptags }}</p>
+                        <p class="card-text post-body my-4 text-dark-emphasis">{{ post.body | striptags }}</p>
                         <a href="{{ url_for('view_post', post_id = post.id) }}" class="btn px-4 py-2 rounded-0">Read More<i class="fa-solid fa-arrow-right ms-2"></i></a>
                         {% if current_user.id == 1 %}
                         <a href="{{ url_for('delete', post_id = post.id) }}" class="btn ms-2 px-4 py-2 rounded-0">Delete<i class="fa-solid fa-arrow-right ms-2"></i></a>
@@ -38,9 +38,33 @@
             </div>
             <!-- End of Col 7 -->
             <div class="col-lg-3">
+                <div class="widget">
+                <blockquote class="twitter-tweet">
+                    <p lang="en" dir="ltr">Sunsets don&#39;t get much better than this one over 
+                        <a href="https://twitter.com/GrandTetonNPS?ref_src=twsrc%5Etfw">@GrandTetonNPS</a>
+                        . 
+                        <a href="https://twitter.com/hashtag/nature?src=hash&amp;ref_src=twsrc%5Etfw">#nature</a> 
+                        <a href="https://twitter.com/hashtag/sunset?src=hash&amp;ref_src=twsrc%5Etfw">#sunset</a> 
+                        <a href="http://t.co/YuKy2rcjyU">pic.twitter.com/YuKy2rcjyU</a>
+                    </p>
+                    &mdash; US Department of the Interior (@Interior) 
+                    <a href="https://twitter.com/Interior/status/463440424141459456?ref_src=twsrc%5Etfw">May 5, 2014</a>
+                </blockquote>
+                <script async src="https://platform.twitter.com/widgets.js" charset="utf-8"></script>
+                </div>
+                <!-- End of Twitter Widget -->
+                <div class="widget text-center">
+                    <ul>
+                        <li class="d-inline-block"><a href="https://www.linkedin.com/in/crisaianvergara/" target="_blank"><i class="fa-brands fa-linkedin fa-2xl mx-2"></i></a></li>
+                        <li class="d-inline-block"><a href="https://github.com/crisaianvergara" target="_blank"><i class="fa-brands fa-github fa-2xl mx-2"></i></i></a></li>
+                        <li class="d-inline-block"><a href="https://twitter.com/The21stKuruno" target="_blank"><i class="fa-brands fa-twitter fa-2xl mx-2"></i></i></a></li>
+                        <li class="d-inline-block"><a href="https://www.instagram.com/aian.vergara/" target="_blank"><i class="fa-brands fa-instagram fa-2xl mx-2"></i></a></li>
+                    </ul>
+                </div>
+                <!-- End of Social Links -->
                 <div class="widget widget-bg p-4 text-center">
                     <h2 class="widget-title d-inline-block mt-4">Subscribe</h2>
-                    <p class="mt-4">Get exclusive content and stay ahead of the curve. Subscribe to Sulat Aian and be the first to receive fresh ideas and insights.</p>
+                    <p class="mt-4 text-dark-emphasis">Get exclusive content and stay ahead of the curve. Subscribe to Sulat Aian and be the first to receive fresh ideas and insights.</p>
                     <form action="#">
                         <div class="form-group">
                             <input type="email" class="form-control rounded-0 my-4 input-subscribe" placeholder="Enter your email">
@@ -51,16 +75,16 @@
                 <!-- End of Subscription Widget -->
                 <div class="widget">
                     <div class="mb-3 text-center">
-                        <h2 class="widget-title">Featured Posts</h2>
+                        <h2 class="widget-title">Popular Posts</h2>
                     </div>
-                    {% for post in posts %}
+                    {% for post in limit_two %}
                     <div class="card bg-transparent post-item border-0 mb-3">
-                        <a href="{{ url_for('view_post', post_id = post.id) }}">
+                        <a class="post-hover" href="{{ url_for('view_post', post_id = post.id) }}">
                             <img class="card-img-top rounded-0" src="{{ post.img_url }}" alt="">
                         </a>
                         <div class="card-body px-0">
                             <h4 class="card-title">
-                                <a class="" href="{{ url_for('view_post', post_id = post.id) }}">{{ post.title }}</a>
+                                <a class="post-hover" href="{{ url_for('view_post', post_id = post.id) }}">{{ post.title }}</a>
                             </h4>
                             <ul class="post-meta mt-3 mb-4">
                                 <li class="d-inline-block me-3">
@@ -77,7 +101,7 @@
                     </div>
                     {% endfor %}
                 </div>
-                <!-- End of Featured Widget -->
+                <!-- End of Popular Widget -->
             </div>
             <!-- End of Col 4 -->
         </div>
