--- a/templates/register.html
+++ b/templates/register.html
@@ -1,6 +1,6 @@
 {% extends "base.html" %}
 
-{% block title %} iSulat | Login {% endblock %}
+{% block title %} Sulat Aian | Sign Up {% endblock %}
 
 {% block content %}
 <div class="container pt-5 mt-5">
