--- a/templates/base.html
+++ b/templates/base.html
@@ -82,14 +82,14 @@
         {% endif %}
     {% endwith %}
     {% block content %} {% endblock %}
-    <footer class="text-center pb-3">
+    <footer id="footer" class="text-center pb-3">
         <ul class="pb-1">
             <li class="d-inline-block"><a href="https://www.linkedin.com/in/crisaianvergara/" target="_blank"><i class="fa-brands fa-linkedin fa-2xl mx-2"></i></a></li>
             <li class="d-inline-block"><a href="https://github.com/crisaianvergara" target="_blank"><i class="fa-brands fa-github fa-2xl mx-2"></i></i></a></li>
             <li class="d-inline-block"><a href="https://twitter.com/The21stKuruno" target="_blank"><i class="fa-brands fa-twitter fa-2xl mx-2"></i></i></a></li>
             <li class="d-inline-block"><a href="https://www.instagram.com/aian.vergara/" target="_blank"><i class="fa-brands fa-instagram fa-2xl mx-2"></i></a></li>
         </ul>
-        <p class="text-dark-emphasis">Copyright © Sulat Aian 2023</p>
+        <p class="text-dark-emphasis">Copyright © Sulat Aian <span id="year">current year</span></p>
     </footer>
     <!-- Bootstrap Scripts -->
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha1/dist/js/bootstrap.bundle.min.js"></script>
