--- a/templates/index.html
+++ b/templates/index.html
@@ -4,7 +4,7 @@
 
 {% block content %}
     <div class="home-section container pt-4 mt-5">
-        <div class="row justify-content-evenly">
+        <div class="row justify-content-between">
             <div class="col-lg-7">
                 {% for post in posts %}
                 <div class="card bg-transparent post-item border-0 mb-5">
@@ -37,7 +37,7 @@
                 <!-- End of Card -->
             </div>
             <!-- End of Col 7 -->
-            <div class="col-lg-3">
+            <div class="col-lg-4">
                 <div class="widget">
                 <blockquote class="twitter-tweet">
                     <p lang="en" dir="ltr">Sunsets don&#39;t get much better than this one over 
@@ -65,10 +65,14 @@
                 <div class="widget widget-bg p-4 text-center">
                     <h2 class="widget-title d-inline-block mt-4">Subscribe</h2>
                     <p class="mt-4 text-dark-emphasis">Get exclusive content and stay ahead of the curve. Subscribe to Sulat Aian and be the first to receive fresh ideas and insights.</p>
-                    <form action="#">
+                    <form method="POST" action="{{ url_for('home') }}" novalidate>
+                        {{ form.csrf_token }}
                         <div class="form-group">
-                            <input type="email" class="form-control rounded-0 my-4 input-subscribe" placeholder="Enter your email">
-                            <button class="btn btn-success px-4 py-2 rounded-0">Subscribe <i class="fa-solid fa-arrow-right ms-2"></i></button>
+                            {{ form.subscriber(class="form-control rounded-0 my-3 input-subscribe") }}
+                            {% for err in form.subscriber.errors %}
+                            <span class="text-danger error-handling mb-3">{{ err }}</span>
+                            {% endfor %}
+                            <button type="submit" class="btn btn-success px-4 py-2 rounded-0">Subscribe <i class="fa-solid fa-arrow-right ms-2"></i></button>
                         </div>
                     </form>
                 </div>
