--- a/templates/index.html
+++ b/templates/index.html
@@ -4,8 +4,8 @@
 
 {% block content %}
     <div class="home-section container pt-4 mt-5">
-        <div class="row justify-content-between">
-            <div class="col-lg-7">
+        <div class="row justify-content-evenly">
+            <div class="col-lg-8">
                 {% for post in posts %}
                 <div class="card bg-transparent post-item border-0 mb-5">
                     <a class="post-hover" href="{{ url_for('view_post', post_id = post.id) }}">
@@ -37,7 +37,7 @@
                 <!-- End of Card -->
             </div>
             <!-- End of Col 7 -->
-            <div class="col-lg-4">
+            <div class="col-lg-3">
                 <div class="widget">
                 <blockquote class="twitter-tweet">
                     <p lang="en" dir="ltr">Sunsets don&#39;t get much better than this one over 
