--- a/templates/blog.html
+++ b/templates/blog.html
@@ -1,6 +1,6 @@
 {% extends "base.html" %}
 
-{% block title %} Sulat Aian | Home {% endblock %}
+{% block title %} Sulat Aian | Blog {% endblock %}
 
 {% block content %}
     <div class="container flex-wrap d-flex justify-content-evenly pt-4 mt-5">
