--- a/templates/base.html
+++ b/templates/base.html
@@ -83,6 +83,7 @@
     {% endwith %}
     {% block content %} {% endblock %}
     <footer id="footer" class="text-center mt-5 pt-5 pb-3">
+        <hr id="footer-hr" class="mb-5">
         <ul class="pb-1">
             <li class="d-inline-block"><a href="https://www.linkedin.com/in/crisaianvergara/" target="_blank"><i class="fa-brands fa-linkedin fa-2xl mx-2"></i></a></li>
             <li class="d-inline-block"><a href="https://github.com/crisaianvergara" target="_blank"><i class="fa-brands fa-github fa-2xl mx-2"></i></i></a></li>
